PharmaDemo/src/objects/Time_off_Territory__c.object
<CustomObject>
    <description>Medical reps use this object to log their time off periods like vacation or sick days.</description>
    <fields>
        <fullName>All_Day__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked please select time off category in 1/4 picklist.</description>
        <label>All Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please enter a reminder description for this entry, this is for your own record.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Days between Start Date and End Date will be filled out</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Entry will use this as start date to insert times out of territory</description>
        <inlineHelpText>Entry will use this as start date to insert times out of territory</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_First_Quarter__c</fullName>
        <inlineHelpText>Select a time off category for the first quarter of the day. Use this when you select all day.</inlineHelpText>
        <label>1/4</label>
        <picklist>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity/Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulatory Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensate Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Fourth_Quarter__c</fullName>
        <inlineHelpText>Select a time off category for the fourth quarter of the day.</inlineHelpText>
        <label>4/4</label>
        <picklist>
            <controllingField>All_Day__c</controllingField>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity/Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulatory Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensate Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Second_Quarter__c</fullName>
        <inlineHelpText>Select a time off category for the second quarter of the day.</inlineHelpText>
        <label>2/4</label>
        <picklist>
            <controllingField>All_Day__c</controllingField>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity/Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulatory Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensate Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Third_Quarter__c</fullName>
        <inlineHelpText>Select a time off category for the third quarter of the day.</inlineHelpText>
        <label>3/4</label>
        <picklist>
            <controllingField>All_Day__c</controllingField>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity/Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulatory Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teambuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensate Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates type of record: Open = unlocked record, Closed = locked record, Submit = submit record</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Time off Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_First_Quarter__c</columns>
        <columns>Type_Second_Quarter__c</columns>
        <columns>Type_Third_Quarter__c</columns>
        <columns>Type_Fourth_Quarter__c</columns>
        <columns>Start_Date__c</columns>
        <columns>All_Day__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyTimemanagement</fullName>
        <columns>Type_First_Quarter__c</columns>
        <columns>Type_Second_Quarter__c</columns>
        <columns>Type_Third_Quarter__c</columns>
        <columns>Type_Fourth_Quarter__c</columns>
        <columns>Start_Date__c</columns>
        <columns>All_Day__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
        </filters>
        <label>My Time Management</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMMDD}-{00}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time off Territory</pluralLabel>
    <recordTypes>
        <fullName>Submit</fullName>
        <active>true</active>
        <description>Submit record which contains a date until time entries get locked</description>
        <label>Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submit_Locked</fullName>
        <active>true</active>
        <description>Ensures that the user cannot change a submit record anymore.</description>
        <label>Submit Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Off</fullName>
        <active>true</active>
        <description>A time off territory entry where the user is still able to make modifications as long as he did not submit time entries.</description>
        <label>Time Off</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Off_Locked</fullName>
        <active>true</active>
        <description>Locked time off territory entry where the user cannot change it anymore. This record type is used after the user submitted his time entries.</description>
        <label>Time Off Locked</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_End_Date_get_Start_Date</fullName>
        <active>true</active>
        <description>Checks that end date is greater than start date</description>
        <errorConditionFormula>IF( NOT(ISNULL(Start_Date__c)),
IF(End_Date__c &lt; Start_Date__c, true,false),
false)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please enter a valid start date that is less or equal to end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Type</fullName>
        <active>true</active>
        <description>Enforce first quarter type</description>
        <errorConditionFormula>AND(OR(ISNULL(TEXT(Type_First_Quarter__c)), LEN(TEXT(Type_First_Quarter__c))=0), NOT ISPICKVAL( Type__c , &apos;Submit&apos;), All_Day__c  )</errorConditionFormula>
        <errorDisplayField>Type_First_Quarter__c</errorDisplayField>
        <errorMessage>Please enter a time off type for the first quarter.</errorMessage>
    </validationRules>
</CustomObject>